<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_date"
            style="@style/TexContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/date_now"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/title_date"
            app:layout_constraintStart_toEndOf="@id/title_date"
            app:layout_constraintTop_toTopOf="@id/title_date" />

        <TextView
            android:id="@+id/title_mode"
            style="@style/TexContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_date" />

        <TextView
            android:id="@+id/tv_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/single_player"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/title_mode"
            app:layout_constraintStart_toEndOf="@id/title_mode"
            app:layout_constraintTop_toTopOf="@id/title_mode" />

        <TextView
            android:id="@+id/title_history"
            style="@style/TexContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_mode" />

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/cpu_win"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/title_history"
            app:layout_constraintStart_toEndOf="@id/title_history"
            app:layout_constraintTop_toTopOf="@id/title_history" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            style="@style/TexContent"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>